k8s/deployment-kickstart.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-kickstart
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
      version: kickstart
  template:
    metadata:
      labels:
        app: myapp
        version: kickstart
    spec:
      containers:
      - name: myapp
        image: 746669234841.dkr.ecr.us-east-1.amazonaws.com/poc:kickstart
        ports:
        - containerPort: 80
