k8s/deployment-scoops.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-scoops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
      version: scoops
  template:
    metadata:
      labels:
        app: myapp
        version: scoops
    spec:
      containers:
      - name: myapp
        image: 746669234841.dkr.ecr.us-east-1.amazonaws.com/poc:scoops
        ports:
        - containerPort: 80
