k8s/canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-canary
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
spec:
  selector:
    app: myapp
    version: canary
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
