k8s/myapp-weighted.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-weighted
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
