k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  selector:
    app: myapp
    version: kickstart
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
