k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: myapp-group
    alb.ingress.kubernetes.io/actions.myapp-weighted: >
      {
        "type": "weightedTargetGroup",
        "targetGroups": [
          {
            "serviceName": "myapp-stable",
            "servicePort": 80,
            "weight": 10
          },
          {
            "serviceName": "myapp-canary",
            "servicePort": 80,
            "weight": 100
          }
        ]
      }
spec:
  ingressClassName: alb
  rules:
    - host: www.rogeralex.work.gd
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp-weighted
                port:
                  number: 80
